<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleConnector</string>

    <string name="str_wifi">WiFi</string>
    <string name="str_bluetooth">BT</string>
    <string name="str_usb">USB</string>
    <string name="str_add">ADD</string>
    <string name="str_send">SEND</string>
    <string name="str_disconnect">Disconnect</string>
    <string name="str_connect">CONNECT</string>
    <string name="str_dot">.</string>
    <string name="str_colon">:</string>
    <string name="str_scanning_0">Scanning </string>
    <string name="str_scanning_1">Scanning .</string>
    <string name="str_scanning_2">Scanning ..</string>
    <string name="str_scanning_3">Scanning ...</string>

</resources>
