<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:id="@+id/ll_connect_options">

        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:text="@string/str_wifi"
            android:id="@+id/btn_wifi_connect"/>

        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:text="@string/str_bluetooth"
            android:id="@+id/btn_bluetooth_connect"/>

        <Button
            android:layout_width="@dimen/btn_width"
            android:layout_height="@dimen/btn_height"
            android:text="@string/str_usb"
            android:id="@+id/btn_usb_connect"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:text="@string/str_disconnect"
            android:id="@+id/btn_disconnect"/>

    </LinearLayout>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="@dimen/message_box_height"
        android:layout_below="@id/ll_connect_options"
        android:id="@+id/lv_message_box"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <EditText
            android:layout_width="@dimen/et_inputbox_width"
            android:layout_height="@dimen/et_inputbox_height"
            android:id="@+id/et_input_box"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:id="@+id/btn_send"
            android:text="@string/str_send"/>

    </LinearLayout>

</RelativeLayout>
