<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_editor_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <EditText
            android:id="@+id/et_ip_1th"
            android:textSize="@dimen/ip_box_text_size"
            android:text="192"
            android:inputType="numberDecimal"
            android:layout_width="@dimen/ip_box_width"
            android:layout_height="@dimen/ip_box_height" />

        <TextView
            android:text="@string/str_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_ip_2nd"
            android:textSize="@dimen/ip_box_text_size"
            android:text="168"
            android:inputType="numberDecimal"
            android:layout_width="@dimen/ip_box_width"
            android:layout_height="@dimen/ip_box_height" />

        <TextView
            android:text="@string/str_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_ip_3rd"
            android:textSize="@dimen/ip_box_text_size"
            android:inputType="numberDecimal"
            android:layout_width="@dimen/ip_box_width"
            android:layout_height="@dimen/ip_box_height" />

        <TextView
            android:text="@string/str_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_ip_4th"
            android:textSize="@dimen/ip_box_text_size"
            android:inputType="numberDecimal"
            android:layout_width="@dimen/ip_box_width"
            android:layout_height="@dimen/ip_box_height" />

        <TextView
            android:text="@string/str_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/et_ip_port"
            android:textSize="@dimen/ip_box_text_size"
            android:inputType="numberDecimal"
            android:layout_width="@dimen/port_box_width"
            android:layout_height="@dimen/ip_box_height" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_address_set"
        android:text="@string/str_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ll_address_list_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    </LinearLayout>

</LinearLayout>